[gd_scene load_steps=3 format=3 uid="uid://dkehqjjgmijgs"]

[ext_resource type="Script" uid="uid://caas2otfmciae" path="res://Scripts/menu.gd" id="1_1rerr"]

[sub_resource type="LabelSettings" id="LabelSettings_1rerr"]
font_size = 50

[node name="Menu" type="Node2D"]
script = ExtResource("1_1rerr")

[node name="Buttons" type="Node" parent="."]

[node name="PlayButton" type="Button" parent="Buttons"]
offset_left = 438.0
offset_top = 410.0
offset_right = 707.0
offset_bottom = 446.0
text = "Play"

[node name="SettingsButton" type="Button" parent="Buttons"]
offset_left = 438.0
offset_top = 462.0
offset_right = 707.0
offset_bottom = 498.0
text = "Settings"

[node name="QuitButton" type="Button" parent="Buttons"]
offset_left = 438.0
offset_top = 514.0
offset_right = 707.0
offset_bottom = 550.0
text = "Quit"

[node name="Label" type="Label" parent="."]
offset_left = 397.0
offset_top = 183.0
offset_right = 758.0
offset_bottom = 252.0
text = "The Wormlings"
label_settings = SubResource("LabelSettings_1rerr")
horizontal_alignment = 1

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="button_up" from="Buttons/PlayButton" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="Buttons/SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="button_up" from="Buttons/QuitButton" to="." method="_on_quit_button_button_up"]
